--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:dev": "tsx watch index.ts | pino-pretty",
     "log": "tsx print-log.ts",
     "format": "prettier ./src index.ts global-constants.ts --write",
-    "lint": "eslint ./src index.ts global-constants.ts"
+    "lint": "eslint ./src index.ts global-constants.ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -17,15 +17,21 @@
   "dependencies": {
     "@fastify/autoload": "^5.8.0",
     "@fastify/env": "^4.3.0",
+    "@fastify/jwt": "^8.0.0",
+    "@fastify/multipart": "^8.1.0",
     "@fastify/redis": "^6.1.1",
     "@fastify/sensible": "^5.5.0",
     "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^2.1.0",
+    "@fastify/swagger-ui": "^3.0.0",
     "@sinclair/typebox": "^0.32.10",
+    "ajv": "^8.12.0",
     "bcrypt": "^5.1.1",
     "fastify": "^4.25.2",
+    "fastify-bcrypt": "^1.0.1",
     "fastify-plugin": "^4.5.1",
+    "knex": "^3.1.0",
     "lodash": "^4.17.21",
+    "pg": "^8.11.3",
     "pino": "^8.17.2",
     "sonic-boom": "^3.8.0"
   },
@@ -37,6 +43,10 @@
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.1.1",
     "glob": "^10.3.10",
     "nodemon": "^3.0.3",
     "pino-pretty": "^10.3.1",
