feat: :sparkles: added kysely

--- a/.env-sample
+++ b/.env-sample
@@ -1,5 +1,20 @@
 # APP
-APP_PORT = <The port that the application will listen on for incoming requests.>
-# REDIS_CLIENT
-REDIS_CLIENT_HOST = <The hostname or IP address of the Redis server that the application will connect to.>
-REDIS_CLIENT_PORT = <The port that the Redis server is listening on.>
+WEB_SERVER_PROTOCOL = <Insert WEB_SERVER_PROTOCOL>
+WEB_SERVER_PORT = <Insert WEB_SERVER_PORT>
+WEB_SERVER_HOST = <Insert WEB_SERVER_HOST>
+#WEB_SERVER_BASE_PATH = <Insert WEB_SERVER_BASE_PATH>
+
+# DB Client postgres
+DB_PORT = <Insert DB_PORT>
+DB_HOST = <Insert DB_HOST>
+DB_USER = <Insert DB_USER>
+DB_PASSWORD = <Insert DB_PASSWORD>
+DATABASE = <Insert DATABASE>
+DATABASE_URL =  <Insert DATABASE_URL>
+
+# JWT secret
+JWT_SECRET = <Insert JWT_SECRET>
+
+# Redis Client
+REDIS_PORT = <Insert REDIS_PORT>
+REDIS_HOST = <Insert REDIS_HOST>
