--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
     "no-console": "warn",
     "@typescript-eslint/no-explicit-any": "off",
     "import/no-unresolved": "off",
+    "import/named": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
