--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:dev": "tsx watch index.ts | pino-pretty",
     "log": "tsx print-log.ts",
     "format": "prettier ./src index.ts global-constants.ts --write",
-    "lint": "eslint ./src index.ts global-constants.ts --fix"
+    "lint": "eslint ./src index.ts global-constants.ts --fix",
+    "kysely-codegen": "kysely-codegen --camel-case"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
     "fastify-bcrypt": "^1.0.1",
     "fastify-plugin": "^4.5.1",
     "knex": "^3.1.0",
+    "kysely": "^0.27.3",
     "lodash": "^4.17.21",
     "pg": "^8.11.3",
     "pino": "^8.17.2",
@@ -40,6 +42,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.5",
+    "@types/pg": "^8.11.3",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
@@ -48,6 +51,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "glob": "^10.3.10",
+    "kysely-codegen": "^0.14.1",
     "nodemon": "^3.0.3",
     "pino-pretty": "^10.3.1",
     "prettier": "^3.2.4",
