feat: :sparkles: migrations added feat: :sparkles: seeds added

--- a/.env-sample
+++ b/.env-sample
@@ -5,11 +5,11 @@ WEB_SERVER_HOST = <Insert WEB_SERVER_HOST>
 #WEB_SERVER_BASE_PATH = <Insert WEB_SERVER_BASE_PATH>
 
 # DB Client postgres
-DB_PORT = <Insert DB_PORT>
-DB_HOST = <Insert DB_HOST>
-DB_USER = <Insert DB_USER>
-DB_PASSWORD = <Insert DB_PASSWORD>
-DATABASE = <Insert DATABASE>
+# DB_PORT = <Insert DB_PORT>
+# DB_HOST = <Insert DB_HOST>
+# DB_USER = <Insert DB_USER>
+# DB_PASSWORD = <Insert DB_PASSWORD>
+# DATABASE = <Insert DATABASE>
 DATABASE_URL =  <Insert DATABASE_URL>
 
 # JWT secret
