--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "log": "tsx print-log.ts",
     "format": "prettier ./src index.ts global-constants.ts --write",
     "lint": "eslint ./src index.ts global-constants.ts --fix",
-    "kysely-codegen": "kysely-codegen --camel-case"
+    "kysely-codegen": "kysely-codegen --camel-case",
+    "migrate:make": "tsx ./src/db/migrate-make.ts --",
+    "migrate:list": "tsx ./src/db/migrate-list.ts",
+    "migrate:latest": "tsx ./src/db/migrate-latest.ts && npm run kysely-codegen",
+    "migrate:rollback": "tsx ./src/db/migrate-rollback.ts --",
+    "seed:list": "tsx ./src/db/seed-list.ts",
+    "seed:run": "tsx ./src/db/seed-run.ts"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +33,8 @@
     "@sinclair/typebox": "^0.32.10",
     "ajv": "^8.12.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "fastify": "^4.25.2",
     "fastify-bcrypt": "^1.0.1",
     "fastify-plugin": "^4.5.1",
@@ -38,13 +46,16 @@
     "sonic-boom": "^3.8.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@inquirer/prompts": "^3.3.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.5",
     "@types/pg": "^8.11.3",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
+    "chalk": "^5.3.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
