--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "log": "tsx print-log.ts",
     "format": "prettier ./src index.ts global-constants.ts --write",
     "lint": "eslint ./src index.ts global-constants.ts --fix",
+    "prepare": "husky",
+    "lint-staged": "lint-staged --concurrent false",
     "kysely-codegen": "kysely-codegen --camel-case",
     "migrate:make": "tsx ./src/db/migrate-make.ts --",
     "migrate:list": "tsx ./src/db/migrate-list.ts",
@@ -62,7 +64,9 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "glob": "^10.3.10",
+    "husky": "^8.0.0",
     "kysely-codegen": "^0.14.1",
+    "lint-staged": "^15.2.2",
     "nodemon": "^3.0.3",
     "pino-pretty": "^10.3.1",
     "prettier": "^3.2.4",
