--- a/.env-sample
+++ b/.env-sample
@@ -2,19 +2,52 @@
 WEB_SERVER_PROTOCOL = <Insert WEB_SERVER_PROTOCOL>
 WEB_SERVER_PORT = <Insert WEB_SERVER_PORT>
 WEB_SERVER_HOST = <Insert WEB_SERVER_HOST>
-#WEB_SERVER_BASE_PATH = <Insert WEB_SERVER_BASE_PATH>
+WEB_SERVER_DOMAIN = <Insert WEB_SERVER_DOMAIN>
 
 # DB Client postgres
-# DB_PORT = <Insert DB_PORT>
-# DB_HOST = <Insert DB_HOST>
-# DB_USER = <Insert DB_USER>
-# DB_PASSWORD = <Insert DB_PASSWORD>
-# DATABASE = <Insert DATABASE>
-DATABASE_URL =  <Insert DATABASE_URL>
+DB_USER = <Insert DB_USER>
+DB_PASSWORD = <Insert DB_PASSWORD>
+DB_HOST = <Insert DB_HOST>
+DB_PORT = <Insert DB_PORT>
+DATABASE = <Insert DATABASE>
+DATABASE_URL =  <Insert DATABASE_URL> # postgres://YourUserName:YourPassword@YourHostname:5432/YourDatabaseName
 
-# JWT secret
-JWT_SECRET = <Insert JWT_SECRET>
+# JWT
+# Super Admin Access
+SUPER_ADMIN_ACCESS_JWT_SECRET = <Insert JWT_SECRET>
+SUPER_ADMIN_ACCESS_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
+# Super Admin Refresh
+SUPER_ADMIN_REFRESH_JWT_SECRET = <Insert JWT_SECRET>
+SUPER_ADMIN_REFRESH_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
+# Tenant Admin Access
+TENANT_ADMIN_ACCESS_JWT_SECRET = <Insert JWT_SECRET>
+TENANT_ADMIN_ACCESS_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
+# Tenant Admin Refresh
+TENANT_ADMIN_REFRESH_JWT_SECRET = <Insert JWT_SECRET>
+TENANT_ADMIN_REFRESH_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
+# Office User Access
+OFFICE_USER_ACCESS_JWT_SECRET = <Insert JWT_SECRET>
+OFFICE_USER_ACCESS_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
+# Office User Refresh
+OFFICE_USER_REFRESH_JWT_SECRET = <Insert JWT_SECRET>
+OFFICE_USER_REFRESH_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
 
 # Redis Client
 REDIS_PORT = <Insert REDIS_PORT>
 REDIS_HOST = <Insert REDIS_HOST>
+
+# S3
+S3_REGION = <Insert S3_REGION>
+S3_ACCESS_KEY_ID = <Insert S3_ACCESS_KEY_ID>
+S3_SECRET_ACCESS_KEY = <Insert S3_SECRET_ACCESS_KEY>
+
+# SendGrid
+SENDGRID_API_KEY = <Insert SENDGRID_API_KEY>
+SENDGRID_MAIL_FROM =  <Insert SENDGRID_MAIL_FROM>
+
+# PayFast
+PAYFAST_MERCHANT_ID = <Insert PAYFAST_MERCHANT_ID>
+PAYFAST_SECURED_KEY =  <Insert PAYFAST_SECURED_KEY>
+
+# Cron
+CRON_SECRET = <Insert CRON_SECRET>
