--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/autoload": "^5.8.0",
+    "@fastify/cors": "^10.0.1",
     "@fastify/env": "^4.3.0",
+    "@fastify/formbody": "^8.0.1",
     "@fastify/jwt": "^8.0.0",
     "@fastify/multipart": "^8.1.0",
     "@fastify/redis": "^6.1.1",
@@ -36,6 +38,7 @@
     "ajv": "^8.12.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.25.2",
     "fastify-bcrypt": "^1.0.1",
