--- a/package.json
+++ b/package.json
@@ -24,57 +24,54 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/autoload": "^5.8.0",
-    "@fastify/cors": "^10.0.1",
-    "@fastify/env": "^4.3.0",
-    "@fastify/formbody": "^8.0.1",
-    "@fastify/jwt": "^8.0.0",
-    "@fastify/multipart": "^8.1.0",
+    "@fastify/autoload": "^5.10.0",
+    "@fastify/cors": "^8.0.1",
+    "@fastify/env": "^4.4.0",
+    "@fastify/formbody": "^7.4.0",
+    "@fastify/jwt": "^8.0.1",
+    "@fastify/multipart": "^8.3.0",
     "@fastify/redis": "^6.1.1",
-    "@fastify/sensible": "^5.5.0",
-    "@fastify/swagger": "^8.14.0",
-    "@fastify/swagger-ui": "^3.0.0",
-    "@sinclair/typebox": "^0.32.10",
-    "ajv": "^8.12.0",
-    "bcrypt": "^5.1.1",
+    "@fastify/sensible": "^5.6.0",
+    "@fastify/swagger": "^8.15.0",
+    "@fastify/swagger-ui": "^4.1.1",
+    "@lukeed/ms": "^2.0.2",
+    "@sinclair/typebox": "^0.33.15",
+    "ajv": "^8.17.1",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
-    "fastify": "^4.25.2",
+    "fastify": "^4.28.1",
     "fastify-bcrypt": "^1.0.1",
     "fastify-plugin": "^4.5.1",
-    "knex": "^3.1.0",
-    "kysely": "^0.27.3",
+    "kysely": "^0.27.4",
     "lodash": "^4.17.21",
-    "pg": "^8.11.3",
-    "pino": "^8.17.2",
-    "sonic-boom": "^3.8.0"
+    "pg": "^8.13.0",
+    "pino": "^8.21.0",
+    "sonic-boom": "^3.8.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "@inquirer/prompts": "^3.3.0",
-    "@types/bcrypt": "^5.0.2",
+    "@inquirer/prompts": "^3.3.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/lodash": "^4.14.202",
-    "@types/node": "^20.11.5",
-    "@types/pg": "^8.11.3",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
+    "@types/lodash": "^4.17.10",
+    "@types/node": "^20.16.11",
+    "@types/pg": "^8.11.10",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "chalk": "^5.3.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.1.1",
-    "glob": "^10.3.10",
-    "husky": "^8.0.0",
-    "kysely-codegen": "^0.14.1",
-    "lint-staged": "^15.2.2",
-    "nodemon": "^3.0.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^6.6.0",
+    "glob": "^10.4.5",
+    "husky": "^8.0.3",
+    "kysely-codegen": "^0.14.2",
+    "lint-staged": "^15.2.10",
     "pino-pretty": "^10.3.1",
-    "prettier": "^3.2.4",
+    "prettier": "^3.3.3",
     "pretty-bytes": "^6.1.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3"
   }
 }
