--- a/package.json
+++ b/package.json
@@ -13,65 +13,79 @@
     "prepare": "husky",
     "lint-staged": "lint-staged --concurrent false",
     "kysely-codegen": "kysely-codegen --camel-case",
-    "migrate:make": "tsx ./src/db/migrate-make.ts --",
-    "migrate:list": "tsx ./src/db/migrate-list.ts",
-    "migrate:latest": "tsx ./src/db/migrate-latest.ts && npm run kysely-codegen",
-    "migrate:rollback": "tsx ./src/db/migrate-rollback.ts --",
-    "seed:list": "tsx ./src/db/seed-list.ts",
-    "seed:run": "tsx ./src/db/seed-run.ts"
+    "migrate:make": "kysely migrate make",
+    "migrate:list": "kysely migrate list",
+    "migrate:latest": "kysely migrate latest && npm run kysely-codegen",
+    "migrate:rollback": "kysely migrate rollback --all",
+    "seed:run": "kysely seed run --specific=",
+    "seed:list": "kysely seed list",
+    "build": "tsc"
+  },
+  "imports": {
+    "#config/*": "./src/config/*",
+    "#plugins/*": "./src/plugins/*",
+    "#repository/*": "./src/repository/*",
+    "#utilities/*": "./src/utilities/*",
+    "#src/*": "./src/*",
+    "#root/*": "./*"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fastify/autoload": "^5.10.0",
-    "@fastify/cors": "^8.0.1",
+    "@fastify/cors": "^8.5.0",
     "@fastify/env": "^4.4.0",
     "@fastify/formbody": "^7.4.0",
     "@fastify/jwt": "^8.0.1",
-    "@fastify/multipart": "^8.3.0",
-    "@fastify/redis": "^6.1.1",
+    "@fastify/multipart": "^8.3.1",
+    "@fastify/redis": "^6.2.0",
     "@fastify/sensible": "^5.6.0",
     "@fastify/swagger": "^8.15.0",
-    "@fastify/swagger-ui": "^4.1.1",
+    "@fastify/swagger-ui": "^4.2.0",
     "@lukeed/ms": "^2.0.2",
-    "@sinclair/typebox": "^0.33.15",
+    "@sinclair/typebox": "^0.33.22",
     "ajv": "^8.17.1",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.5",
-    "fastify": "^4.28.1",
+    "dotenv": "^16.4.7",
+    "fastify": "^4.29.0",
     "fastify-bcrypt": "^1.0.1",
     "fastify-plugin": "^4.5.1",
-    "kysely": "^0.27.4",
+    "kysely": "^0.27.5",
     "lodash": "^4.17.21",
-    "pg": "^8.13.0",
+    "pg": "^8.13.3",
     "pino": "^8.21.0",
+    "pino-roll": "^3.0.0",
     "sonic-boom": "^3.8.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@faker-js/faker": "^8.4.1",
     "@inquirer/prompts": "^3.3.2",
     "@types/bcryptjs": "^2.4.6",
-    "@types/lodash": "^4.17.10",
-    "@types/node": "^20.16.11",
-    "@types/pg": "^8.11.10",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "chalk": "^5.3.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
+    "@types/lodash": "^4.17.15",
+    "@types/node": "^20.17.18",
+    "@types/pg": "^8.11.11",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "^8.24.0",
+    "chalk": "^5.4.1",
+    "eslint": "^9.20.1",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-promise": "^7.2.1",
     "glob": "^10.4.5",
+    "globals": "^15.15.0",
     "husky": "^8.0.3",
-    "kysely-codegen": "^0.14.2",
-    "lint-staged": "^15.2.10",
+    "kysely-codegen": "^0.17.0",
+    "kysely-ctl": "^0.11.0",
+    "lint-staged": "^15.4.3",
     "pino-pretty": "^10.3.1",
-    "prettier": "^3.3.3",
+    "prettier": "^3.5.1",
     "pretty-bytes": "^6.1.1",
-    "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.0"
   }
 }
