--- a/package.json
+++ b/package.json
@@ -33,37 +33,35 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/autoload": "^5.10.0",
-    "@fastify/cors": "^8.5.0",
-    "@fastify/env": "^4.4.0",
-    "@fastify/formbody": "^7.4.0",
-    "@fastify/jwt": "^8.0.1",
-    "@fastify/multipart": "^8.3.1",
-    "@fastify/redis": "^6.2.0",
-    "@fastify/sensible": "^5.6.0",
-    "@fastify/swagger": "^8.15.0",
-    "@fastify/swagger-ui": "^4.2.0",
+    "@fastify/autoload": "^6.1.0",
+    "@fastify/cors": "^10.0.2",
+    "@fastify/env": "^5.0.2",
+    "@fastify/formbody": "^8.0.2",
+    "@fastify/jwt": "^9.0.4",
+    "@fastify/multipart": "^9.0.3",
+    "@fastify/redis": "^7.0.2",
+    "@fastify/sensible": "^6.0.3",
+    "@fastify/swagger": "^9.4.2",
+    "@fastify/swagger-ui": "^5.2.1",
     "@lukeed/ms": "^2.0.2",
-    "@sinclair/typebox": "^0.33.22",
+    "@sinclair/typebox": "^0.34.21",
     "ajv": "^8.17.1",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "fastify": "^4.29.0",
-    "fastify-bcrypt": "^1.0.1",
-    "fastify-plugin": "^4.5.1",
+    "fastify": "^5.2.1",
+    "fastify-plugin": "^5.0.1",
     "kysely": "^0.27.5",
     "lodash": "^4.17.21",
     "pg": "^8.13.3",
-    "pino": "^8.21.0",
-    "pino-roll": "^3.0.0",
-    "sonic-boom": "^3.8.1"
+    "pino": "^9.6.0",
+    "pino-roll": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
-    "@faker-js/faker": "^8.4.1",
-    "@inquirer/prompts": "^3.3.2",
-    "@types/bcryptjs": "^2.4.6",
+    "@faker-js/faker": "^9.5.0",
+    "@inquirer/prompts": "^7.3.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.15",
     "@types/node": "^20.17.18",
     "@types/pg": "^8.11.11",
@@ -75,13 +73,13 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-promise": "^7.2.1",
-    "glob": "^10.4.5",
+    "glob": "^11.0.1",
     "globals": "^15.15.0",
-    "husky": "^8.0.3",
+    "husky": "^9.1.7",
     "kysely-codegen": "^0.17.0",
     "kysely-ctl": "^0.11.0",
     "lint-staged": "^15.4.3",
-    "pino-pretty": "^10.3.1",
+    "pino-pretty": "^13.0.0",
     "prettier": "^3.5.1",
     "pretty-bytes": "^6.1.1",
     "tsx": "^4.19.2",
