Refactor: Consistent folder names and config restructuring
Renames `config` to `configs` and `repository` to `repositories` for consistency.
Also restructures how configurations are handled, with several individual config files being removed or potentially relocated.  Updates imports in `index.ts` to reflect these changes.

--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "build": "tsc"
   },
   "imports": {
-    "#config/*": "./src/config/*",
+    "#configs/*": "./src/configs/*",
     "#plugins/*": "./src/plugins/*",
-    "#repository/*": "./src/repository/*",
+    "#repositories/*": "./src/repositories/*",
     "#utilities/*": "./src/utilities/*",
     "#src/*": "./src/*",
     "#root/*": "./*"
