--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,9 +30,9 @@
     "moduleResolution": "node10" /* Specify how TypeScript looks up a file from a given module specifier. */,
     "baseUrl": "." /* Specify the base directory to resolve non-relative module names. */,
     "paths": {
-      "#config/*": ["src/config/*"],
+      "#configs/*": ["src/configs/*"],
       "#plugins/*": ["src/plugins/*"],
-      "#repository/*": ["src/repository/*"],
+      "#repositories/*": ["src/repositories/*"],
       "#utilities/*": ["src/utilities/*"],
       "#src/*": ["src/*"], // Or leave this out, it's usually not needed
       "#root/*": ["*"] // Highly recommend to avoid this one
