--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "@fastify/redis": "^7.0.2",
     "@fastify/sensible": "^6.0.3",
     "@fastify/swagger": "^9.4.2",
-    "@fastify/swagger-ui": "^5.2.1",
+    "@fastify/swagger-ui": "github:AsadGG/fastify-swagger-ui",
     "@lukeed/ms": "^2.0.2",
-    "@sinclair/typebox": "^0.34.21",
+    "@sinclair/typebox": "^0.34.26",
     "ajv": "^8.17.1",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
@@ -60,13 +60,13 @@
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@faker-js/faker": "^9.5.0",
-    "@inquirer/prompts": "^7.3.1",
+    "@inquirer/prompts": "^7.3.2",
     "@types/bcrypt": "^5.0.2",
     "@types/lodash": "^4.17.15",
-    "@types/node": "^20.17.18",
+    "@types/node": "^20.17.19",
     "@types/pg": "^8.11.11",
-    "@typescript-eslint/eslint-plugin": "^8.24.0",
-    "@typescript-eslint/parser": "^8.24.0",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "chalk": "^5.4.1",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
@@ -77,13 +77,13 @@
     "globals": "^15.15.0",
     "husky": "^9.1.7",
     "kysely-codegen": "^0.17.0",
-    "kysely-ctl": "^0.11.0",
+    "kysely-ctl": "^0.11.1",
     "lint-staged": "^15.4.3",
     "pino-pretty": "^13.0.0",
     "prettier": "^3.5.1",
     "pretty-bytes": "^6.1.1",
-    "tsx": "^4.19.2",
+    "tsx": "^4.19.3",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.0"
+    "typescript-eslint": "^8.24.1"
   }
 }
