chore: :arrow_up: update dependencies

--- a/.env-sample
+++ b/.env-sample
@@ -1,40 +1,40 @@
 # APP
-WEB_SERVER_PROTOCOL = <Insert WEB_SERVER_PROTOCOL>
-WEB_SERVER_PORT = <Insert WEB_SERVER_PORT>
-WEB_SERVER_HOST = <Insert WEB_SERVER_HOST>
-WEB_SERVER_DOMAIN = <Insert WEB_SERVER_DOMAIN>
+WEB_SERVER_PROTOCOL = "<Insert WEB_SERVER_PROTOCOL>"
+WEB_SERVER_PORT = "<Insert WEB_SERVER_PORT>"
+WEB_SERVER_HOST = "<Insert WEB_SERVER_HOST>"
+WEB_SERVER_DOMAIN = "<Insert WEB_SERVER_DOMAIN>"
 
 # DB Client postgres
-DB_USER = <Insert DB_USER>
-DB_PASSWORD = <Insert DB_PASSWORD>
-DB_HOST = <Insert DB_HOST>
-DB_PORT = <Insert DB_PORT>
-DATABASE = <Insert DATABASE>
-DATABASE_URL =  <Insert DATABASE_URL> # postgres://YourUserName:YourPassword@YourHostname:5432/YourDatabaseName
+DB_USER = "<Insert DB_USER>"
+DB_PASSWORD = "<Insert DB_PASSWORD>"
+DB_HOST = "<Insert DB_HOST>"
+DB_PORT = "<Insert DB_PORT>"
+DATABASE = "<Insert DATABASE>"
+DATABASE_URL = "<Insert DATABASE_URL>" # postgres://YourUserName:YourPassword@YourHostname:5432/YourDatabaseName
 
 # JWT
 # Super Admin Access
-SUPER_ADMIN_ACCESS_JWT_SECRET = <Insert JWT_SECRET>
-SUPER_ADMIN_ACCESS_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
+SUPER_ADMIN_ACCESS_JWT_SECRET = "<Insert JWT_SECRET>"
+SUPER_ADMIN_ACCESS_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # For more info look into @lukeed/ms.
 # Super Admin Refresh
-SUPER_ADMIN_REFRESH_JWT_SECRET = <Insert JWT_SECRET>
-SUPER_ADMIN_REFRESH_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
+SUPER_ADMIN_REFRESH_JWT_SECRET = "<Insert JWT_SECRET>"
+SUPER_ADMIN_REFRESH_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # For more info look into @lukeed/ms.
 # Tenant Admin Access
-TENANT_ADMIN_ACCESS_JWT_SECRET = <Insert JWT_SECRET>
-TENANT_ADMIN_ACCESS_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
+TENANT_ADMIN_ACCESS_JWT_SECRET = "<Insert JWT_SECRET>"
+TENANT_ADMIN_ACCESS_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # For more info look into @lukeed/ms.
 # Tenant Admin Refresh
-TENANT_ADMIN_REFRESH_JWT_SECRET = <Insert JWT_SECRET>
-TENANT_ADMIN_REFRESH_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
+TENANT_ADMIN_REFRESH_JWT_SECRET = "<Insert JWT_SECRET>"
+TENANT_ADMIN_REFRESH_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # For more info look into @lukeed/ms.
 # Office User Access
-OFFICE_USER_ACCESS_JWT_SECRET = <Insert JWT_SECRET>
-OFFICE_USER_ACCESS_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
+OFFICE_USER_ACCESS_JWT_SECRET = "<Insert JWT_SECRET>"
+OFFICE_USER_ACCESS_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # For more info look into @lukeed/ms.
 # Office User Refresh
-OFFICE_USER_REFRESH_JWT_SECRET = <Insert JWT_SECRET>
-OFFICE_USER_REFRESH_JWT_EXPIRES_IN = <Insert JWT_EXPIRES_IN> For more info look into @lukeed/ms.
+OFFICE_USER_REFRESH_JWT_SECRET = "<Insert JWT_SECRET>"
+OFFICE_USER_REFRESH_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # For more info look into @lukeed/ms.
 
 # Redis Client
-REDIS_PORT = <Insert REDIS_PORT>
-REDIS_HOST = <Insert REDIS_HOST>
+REDIS_PORT = "<Insert REDIS_PORT>"
+REDIS_HOST = "<Insert REDIS_HOST>"
 
 # Cron
-CRON_SECRET = <Insert CRON_SECRET>
+CRON_SECRET = "<Insert CRON_SECRET>"
