--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "migrate:rollback": "kysely migrate rollback --all",
     "seed:run": "kysely seed run --specific=",
     "seed:list": "kysely seed list",
-    "build": "tsc"
+    "build": "tsc",
+    "check": "tsc --noEmit"
   },
   "imports": {
     "#configs/*": "./src/configs/*",
@@ -58,16 +59,16 @@
     "pino-roll": "^3.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
-    "@inquirer/prompts": "^7.7.1",
+    "@eslint/js": "^9.32.0",
+    "@inquirer/prompts": "^7.8.0",
     "@types/bcrypt": "^6.0.0",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20.19.9",
-    "@types/pg": "^8.15.4",
+    "@types/pg": "^8.15.5",
     "@typescript-eslint/eslint-plugin": "^8.38.0",
     "@typescript-eslint/parser": "^8.38.0",
     "chalk": "^5.4.1",
-    "eslint": "^9.31.0",
+    "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.3",
@@ -78,7 +79,7 @@
     "kysely-codegen": "^0.18.5",
     "kysely-ctl": "^0.14.0",
     "lint-staged": "^16.1.2",
-    "pino-pretty": "^13.0.0",
+    "pino-pretty": "^13.1.1",
     "prettier": "^3.6.2",
     "pretty-bytes": "^7.0.0",
     "tsx": "^4.20.3",
