--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "migrate:rollback": "kysely migrate rollback --all",
     "seed:run": "kysely seed run --specific=",
     "seed:list": "kysely seed list",
-    "build": "tsc",
+    "build": "tsc && tsx post-build.ts",
     "check": "tsc --noEmit"
   },
   "imports": {
-    "#configs/*": "./src/configs/*",
-    "#plugins/*": "./src/plugins/*",
-    "#repositories/*": "./src/repositories/*",
-    "#utilities/*": "./src/utilities/*",
-    "#src/*": "./src/*",
-    "#root/*": "./*"
+    "#configs/*": "./src/configs/*.js",
+    "#plugins/*": "./src/plugins/*.js",
+    "#repositories/*": "./src/repositories/*.js",
+    "#utilities/*": "./src/utilities/*.js",
+    "#src/*": "./src/*.js",
+    "#root/*": "./*.js"
   },
   "keywords": [],
   "author": "",
@@ -50,13 +50,14 @@
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
-    "fastify": "^5.4.0",
     "fastify-plugin": "^5.0.1",
+    "fastify": "^5.4.0",
     "kysely": "^0.28.4",
     "lodash": "^4.17.21",
     "pg": "^8.16.3",
-    "pino": "^9.7.0",
-    "pino-roll": "^3.1.0"
+    "pino-pretty": "^13.1.1",
+    "pino-roll": "^3.1.0",
+    "pino": "^9.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
@@ -79,7 +80,6 @@
     "kysely-codegen": "^0.18.5",
     "kysely-ctl": "^0.14.0",
     "lint-staged": "^16.1.4",
-    "pino-pretty": "^13.1.1",
     "prettier": "^3.6.2",
     "pretty-bytes": "^7.0.0",
     "tsx": "^4.20.3",
