--- a/package.json
+++ b/package.json
@@ -38,38 +38,38 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/env": "^5.0.2",
     "@fastify/formbody": "^8.0.2",
-    "@fastify/jwt": "^9.1.0",
+    "@fastify/jwt": "^10.0.0",
     "@fastify/multipart": "^9.0.3",
     "@fastify/redis": "^7.0.2",
     "@fastify/sensible": "^6.0.3",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "github:AsadGG/fastify-swagger-ui",
     "@lukeed/ms": "^2.0.2",
-    "@sinclair/typebox": "^0.34.38",
+    "@sinclair/typebox": "^0.34.41",
     "ajv": "^8.17.1",
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
+    "fastify": "^5.5.0",
     "fastify-plugin": "^5.0.1",
-    "fastify": "^5.4.0",
-    "kysely": "^0.28.4",
+    "kysely": "^0.28.5",
     "lodash": "^4.17.21",
     "pg": "^8.16.3",
+    "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
-    "pino-roll": "^3.1.0",
-    "pino": "^9.7.0"
+    "pino-roll": "^3.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.32.0",
-    "@inquirer/prompts": "^7.8.0",
+    "@eslint/js": "^9.34.0",
+    "@inquirer/prompts": "^7.8.4",
     "@types/bcrypt": "^6.0.0",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^20.19.9",
+    "@types/node": "^20.19.11",
     "@types/pg": "^8.15.5",
-    "@typescript-eslint/eslint-plugin": "^8.39.0",
-    "@typescript-eslint/parser": "^8.39.0",
-    "chalk": "^5.5.0",
-    "eslint": "^9.32.0",
+    "@typescript-eslint/eslint-plugin": "^8.41.0",
+    "@typescript-eslint/parser": "^8.41.0",
+    "chalk": "^5.6.0",
+    "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
@@ -78,12 +78,12 @@
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "kysely-codegen": "^0.18.5",
-    "kysely-ctl": "^0.14.0",
-    "lint-staged": "^16.1.4",
+    "kysely-ctl": "^0.18.0",
+    "lint-staged": "^16.1.5",
     "prettier": "^3.6.2",
-    "pretty-bytes": "^7.0.0",
-    "tsx": "^4.20.3",
+    "pretty-bytes": "^7.0.1",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.0"
+    "typescript-eslint": "^8.41.0"
   }
 }
