Refactor API response handling and schemas
- Updated HTTP status codes import to use a centralized utility.
- Introduced common response schemas for consistency across API endpoints.
- Enhanced error handling to return appropriate status codes and messages.
- Added pagination and search query schemas for todos endpoint.
- Refactored sign-in and sign-out endpoints to utilize new response schemas.
- Improved todos CRUD operations with detailed response structures.
- Removed deprecated HTTP status utility file and replaced with a comprehensive status codes file.
- Added region comments for better organization of code sections.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,7 @@
       "#configs/*": ["src/configs/*"],
       "#plugins/*": ["src/plugins/*"],
       "#repositories/*": ["src/repositories/*"],
+      "#schemas/*": ["src/schemas/*"],
       "#utilities/*": ["src/utilities/*"],
       "#src/*": ["src/*"], // Or leave this out, it's usually not needed
       "#root/*": ["*"] // Highly recommend to avoid this one
