--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "#configs/*": "./src/configs/*.js",
     "#plugins/*": "./src/plugins/*.js",
     "#repositories/*": "./src/repositories/*.js",
+    "#schemas/*": "./src/schemas/*.js",
     "#utilities/*": "./src/utilities/*.js",
     "#src/*": "./src/*.js",
     "#root/*": "./*.js"
@@ -78,7 +79,7 @@
     "globals": "^16.3.0",
     "husky": "^9.1.7",
     "kysely-codegen": "^0.19.0",
-    "kysely-ctl": "^0.18.0",
+    "kysely-ctl": "^0.19.0",
     "lint-staged": "^16.1.6",
     "prettier": "^3.6.2",
     "pretty-bytes": "^7.0.1",
