--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fastify/autoload": "^6.3.1",
     "@fastify/cors": "^11.1.0",
     "@fastify/env": "^5.0.2",
+    "@fastify/error": "^4.2.0",
     "@fastify/formbody": "^8.0.2",
     "@fastify/jwt": "^10.0.0",
     "@fastify/multipart": "^9.2.1",
