--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@fastify/multipart": "^9.2.1",
     "@fastify/redis": "^7.0.2",
     "@fastify/sensible": "^6.0.3",
+    "@fastify/static": "^8.2.0",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "github:AsadGG/fastify-swagger-ui",
     "@lukeed/ms": "^2.0.2",
@@ -54,7 +55,7 @@
     "dotenv": "^17.2.2",
     "fastify": "^5.6.0",
     "fastify-plugin": "^5.0.1",
-    "kysely": "^0.28.5",
+    "kysely": "^0.28.7",
     "lodash": "^4.17.21",
     "pg": "^8.16.3",
     "pino": "^9.9.5",
@@ -63,10 +64,10 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
-    "@inquirer/prompts": "^7.8.4",
+    "@inquirer/prompts": "^7.8.6",
     "@types/bcrypt": "^6.0.0",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^20.19.13",
+    "@types/node": "^20.19.14",
     "@types/pg": "^8.15.5",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
