chore: :arrow_up: update dependencies

--- a/.env-sample
+++ b/.env-sample
@@ -1,9 +1,7 @@
 # APP
-WEB_SERVER_PROTOCOL = "<Insert WEB_SERVER_PROTOCOL>" # http
+WEB_SERVER_BIND_ADDRESS = "<Insert WEB_SERVER_BIND_ADDRESS>" # 0.0.0.0
 WEB_SERVER_PORT = "<Insert WEB_SERVER_PORT>" # 3000
-WEB_SERVER_HOST = "<Insert WEB_SERVER_HOST>" # localhost
-
-WEB_SERVER_DOMAIN = "<Insert WEB_SERVER_DOMAIN>" # http://localhost:3000
+WEB_SERVER_BASE_URL = "<Insert WEB_SERVER_BASE_URL>" # http://localhost:3000
 
 # DB Client postgres
 DB_USER = "<Insert DB_USER>" # YourUserName
