--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "tsx index.ts",
-    "start:dev": "tsx watch index.ts | pino-pretty",
+    "start:dev": "tsx watch index.ts",
     "log": "tsx print-log.ts",
     "format": "prettier ./src index.ts global-constants.ts --write",
     "lint": "eslint ./src index.ts global-constants.ts --fix",
@@ -42,7 +42,7 @@
     "@fastify/formbody": "^8.0.2",
     "@fastify/jwt": "^10.0.0",
     "@fastify/multipart": "^9.2.1",
-    "@fastify/redis": "^7.0.2",
+    "@fastify/redis": "^7.1.0",
     "@fastify/sensible": "^6.0.3",
     "@fastify/static": "^8.2.0",
     "@fastify/swagger": "^9.5.2",
@@ -58,21 +58,21 @@
     "kysely": "^0.28.7",
     "lodash": "^4.17.21",
     "pg": "^8.16.3",
-    "pino": "^9.12.0",
+    "pino": "^10.0.0",
     "pino-pretty": "^13.1.1",
-    "pino-roll": "^3.1.0"
+    "pino-roll": "^4.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.36.0",
+    "@eslint/js": "^9.37.0",
     "@inquirer/prompts": "^7.8.6",
     "@types/bcrypt": "^6.0.0",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20.19.19",
     "@types/pg": "^8.15.5",
-    "@typescript-eslint/eslint-plugin": "^8.45.0",
-    "@typescript-eslint/parser": "^8.45.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "^8.46.0",
     "chalk": "^5.6.2",
-    "eslint": "^9.36.0",
+    "eslint": "^9.37.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
@@ -87,6 +87,6 @@
     "pretty-bytes": "^7.1.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.45.0"
+    "typescript-eslint": "^8.46.0"
   }
 }
