--- a/package.json
+++ b/package.json
@@ -1,27 +1,11 @@
 {
   "name": "fastify-boilerplate-typescript",
+  "type": "module",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "start": "tsx index.ts",
-    "start:dev": "tsx watch index.ts",
-    "log": "tsx print-log.ts",
-    "format": "prettier ./src index.ts global-constants.ts --write",
-    "lint": "eslint ./src index.ts global-constants.ts --fix",
-    "prepare": "husky",
-    "lint-staged": "lint-staged --concurrent false",
-    "kysely-codegen": "kysely-codegen --camel-case",
-    "migrate:make": "kysely migrate make",
-    "migrate:list": "kysely migrate list",
-    "migrate:latest": "kysely migrate latest && npm run kysely-codegen",
-    "migrate:rollback": "kysely migrate rollback --all",
-    "seed:run": "kysely seed run --specific=",
-    "seed:list": "kysely seed list",
-    "build": "tsc && tsx post-build.ts",
-    "check": "tsc --noEmit"
-  },
+  "author": "",
+  "license": "ISC",
+  "keywords": [],
   "imports": {
     "#configs/*": "./src/configs/*.js",
     "#plugins/*": "./src/plugins/*.js",
@@ -31,9 +15,23 @@
     "#src/*": "./src/*.js",
     "#root/*": "./*.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "index.js",
+  "scripts": {
+    "start": "tsx index.ts",
+    "start:dev": "tsx watch index.ts",
+    "log": "tsx print-log.ts",
+    "prepare": "husky",
+    "kysely-codegen": "kysely-codegen --camel-case --out-file src/types/database.ts",
+    "migrate:make": "kysely migrate make",
+    "migrate:list": "kysely migrate list",
+    "migrate:latest": "kysely migrate latest && npm run kysely-codegen",
+    "migrate:rollback": "kysely migrate rollback --all",
+    "seed:run": "kysely seed run --specific=",
+    "seed:list": "kysely seed list",
+    "build": "tsc && tsx post-build.ts",
+    "check": "tsc --noEmit",
+    "lint:fix": "eslint . --fix"
+  },
   "dependencies": {
     "@fastify/autoload": "^6.3.1",
     "@fastify/cors": "^11.1.0",
@@ -41,10 +39,10 @@
     "@fastify/error": "^4.2.0",
     "@fastify/formbody": "^8.0.2",
     "@fastify/jwt": "^10.0.0",
-    "@fastify/multipart": "^9.2.1",
+    "@fastify/multipart": "^9.3.0",
     "@fastify/redis": "^7.1.0",
     "@fastify/sensible": "^6.0.3",
-    "@fastify/static": "^8.2.0",
+    "@fastify/static": "^8.3.0",
     "@fastify/swagger": "^9.5.2",
     "@fastify/swagger-ui": "github:AsadGG/fastify-swagger-ui",
     "@lukeed/ms": "^2.0.2",
@@ -58,35 +56,26 @@
     "kysely": "^0.28.8",
     "lodash": "^4.17.21",
     "pg": "^8.16.3",
-    "pino": "^10.0.0",
+    "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
     "pino-roll": "^4.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.37.0",
-    "@inquirer/prompts": "^7.8.6",
+    "@antfu/eslint-config": "^6.2.0",
+    "@inquirer/prompts": "^7.9.0",
     "@types/bcrypt": "^6.0.0",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^20.19.20",
-    "@types/pg": "^8.15.5",
-    "@typescript-eslint/eslint-plugin": "^8.46.0",
-    "@typescript-eslint/parser": "^8.46.0",
+    "@types/node": "^22.19.0",
+    "@types/pg": "^8.15.6",
     "chalk": "^5.6.2",
-    "eslint": "^9.37.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-prettier": "^5.5.4",
-    "eslint-plugin-promise": "^7.2.1",
+    "eslint": "^9.39.0",
     "glob": "^11.0.3",
-    "globals": "^16.4.0",
+    "globals": "^16.5.0",
     "husky": "^9.1.7",
     "kysely-codegen": "^0.19.0",
     "kysely-ctl": "^0.19.0",
-    "lint-staged": "^16.2.3",
-    "prettier": "^3.6.2",
     "pretty-bytes": "^7.1.0",
     "tsx": "^4.20.6",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0"
+    "typescript": "^5.9.3"
   }
 }
