--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "start": "tsx index.ts",
     "start:dev": "tsx watch index.ts",
     "log": "tsx print-log.ts",
-    "prepare": "husky",
     "kysely-codegen": "kysely-codegen --camel-case --out-file src/types/database.ts",
     "migrate:make": "kysely migrate make",
     "migrate:list": "kysely migrate list",
@@ -30,7 +29,9 @@
     "seed:list": "kysely seed list",
     "build": "tsc && tsx post-build.ts",
     "check": "tsc --noEmit",
-    "lint:fix": "eslint . --fix --cache"
+    "lint:fix": "eslint . --fix --cache",
+    "lint-staged": "lint-staged",
+    "postinstall": "simple-git-hooks"
   },
   "dependencies": {
     "@fastify/autoload": "^6.3.1",
@@ -71,11 +72,18 @@
     "eslint": "^9.39.0",
     "glob": "^11.0.3",
     "globals": "^16.5.0",
-    "husky": "^9.1.7",
     "kysely-codegen": "^0.19.0",
     "kysely-ctl": "^0.19.0",
+    "lint-staged": "^16.2.7",
     "pretty-bytes": "^7.1.0",
+    "simple-git-hooks": "^2.13.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npm run lint-staged && npm run check"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
   }
 }
