--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "@fastify/formbody": "^8.0.2",
     "@fastify/jwt": "^10.0.0",
     "@fastify/multipart": "^9.3.0",
-    "@fastify/sensible": "^6.0.3",
+    "@fastify/sensible": "^6.0.4",
     "@fastify/static": "^8.3.0",
-    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger": "^9.6.1",
     "@fastify/swagger-ui": "github:AsadGG/fastify-swagger-ui",
     "@lukeed/ms": "^2.0.2",
     "@sinclair/typebox": "^0.34.41",
@@ -51,32 +51,33 @@
     "bcrypt": "^6.0.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
-    "fastify": "^5.6.1",
+    "eslint-plugin-unicorn": "^62.0.0",
+    "fastify": "^5.6.2",
     "fastify-plugin": "^5.1.0",
     "kysely": "^0.28.8",
     "lodash": "^4.17.21",
     "pg": "^8.16.3",
     "pino": "^10.1.0",
-    "pino-pretty": "^13.1.2",
+    "pino-pretty": "^13.1.3",
     "pino-roll": "^4.0.0"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^6.2.0",
-    "@inquirer/prompts": "^7.9.0",
+    "@antfu/eslint-config": "^6.3.0",
+    "@inquirer/prompts": "^8.0.2",
     "@types/bcrypt": "^6.0.0",
-    "@types/lodash": "^4.17.20",
-    "@types/node": "^22.19.0",
+    "@types/lodash": "^4.17.21",
+    "@types/node": "^22.19.1",
     "@types/pg": "^8.15.6",
     "chalk": "^5.6.2",
-    "eslint": "^9.39.0",
-    "glob": "^11.0.3",
+    "eslint": "^9.39.1",
+    "glob": "^13.0.0",
     "globals": "^16.5.0",
     "kysely-codegen": "^0.19.0",
     "kysely-ctl": "^0.19.0",
     "lint-staged": "^16.2.7",
     "pretty-bytes": "^7.1.0",
     "simple-git-hooks": "^2.13.1",
-    "tsx": "^4.20.6",
+    "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
   "simple-git-hooks": {
