refactor: restructure user authentication and JWT handling
- Updated environment configuration to remove super admin and tenant admin JWT settings, introducing user access and refresh JWT settings.
- Refactored JWT configuration to support user access and refresh tokens.
- Simplified JWT plugin to handle user authentication, removing super admin and tenant admin logic.
- Created user repository for fetching user details by ID and email.
- Updated routes for user sign-in, sign-out, and token refresh to utilize user repository and JWT handling.
- Adjusted Redis key management to align with user-based authentication.
- Modified database types to include user entity and removed super admin references.

--- a/.env-sample
+++ b/.env-sample
@@ -12,24 +12,12 @@ DATABASE = "<Insert DATABASE>" # YourDatabaseName
 DATABASE_URL = "<Insert DATABASE_URL>" # postgres://YourUserName:YourPassword@YourHostname:5432/YourDatabaseName
 
 # JWT
-# Super Admin Access
-SUPER_ADMIN_ACCESS_JWT_SECRET = "<Insert JWT_SECRET>"  # super_admin_access_jwt_secret
-SUPER_ADMIN_ACCESS_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # 12h For more info look into @lukeed/ms.
-# Super Admin Refresh
-SUPER_ADMIN_REFRESH_JWT_SECRET = "<Insert JWT_SECRET>" # super_admin_refresh_jwt_secret
-SUPER_ADMIN_REFRESH_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # 1d For more info look into @lukeed/ms.
-# Tenant Admin Access
-TENANT_ADMIN_ACCESS_JWT_SECRET = "<Insert JWT_SECRET>" # tenant_admin_access_jwt_secret
-TENANT_ADMIN_ACCESS_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # 1d For more info look into @lukeed/ms.
-# Tenant Admin Refresh
-TENANT_ADMIN_REFRESH_JWT_SECRET = "<Insert JWT_SECRET>" # tenant_admin_refresh_jwt_secret
-TENANT_ADMIN_REFRESH_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # 2d For more info look into @lukeed/ms.
-# Office User Access
-OFFICE_USER_ACCESS_JWT_SECRET = "<Insert JWT_SECRET>" # office_user_access_jwt_secret
-OFFICE_USER_ACCESS_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # 2d For more info look into @lukeed/ms.
-# Office User Refresh
-OFFICE_USER_REFRESH_JWT_SECRET = "<Insert JWT_SECRET>" # office_user_refresh_jwt_secret
-OFFICE_USER_REFRESH_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # 4d For more info look into @lukeed/ms.
+# User Access
+USER_ACCESS_JWT_SECRET = "<Insert JWT_SECRET>"  # user_access_jwt_secret
+USER_ACCESS_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # 12h For more info look into @lukeed/ms.
+# User Refresh
+USER_REFRESH_JWT_SECRET = "<Insert JWT_SECRET>" # user_refresh_jwt_secret
+USER_REFRESH_JWT_EXPIRES_IN = "<Insert JWT_EXPIRES_IN>" # 1d For more info look into @lukeed/ms.
 
 # Redis Client
 REDIS_PORT = "<Insert REDIS_PORT>" # 6379
